RESOLVED FIXED28840
aria definition role spelled wrong "defintion"
https://bugs.webkit.org/show_bug.cgi?id=28840
Summary aria definition role spelled wrong "defintion"
chris fleizach
Reported 2009-08-30 23:15:50 PDT
someone (who will not be named) spelled definition wrong
Attachments
patch (3.92 KB, patch)
2009-09-10 23:54 PDT, chris fleizach
darin: review+
chris fleizach
Comment 1 2009-09-10 23:54:56 PDT
chris fleizach
Comment 2 2009-09-11 20:32:06 PDT
Note You need to log in before you can comment on or make changes to this bug.