aria definition role spelled wrong "defintion" https://bugs.webkit.org/show_bug.cgi?id=28840

Reviewed by Darin Adler.

WebCore:

Test: accessibility/aria-slider-value-change.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::RoleEntry::):

LayoutTests:

* platform/mac/accessibility/aria-grouping-roles-expected.txt:
* platform/mac/accessibility/aria-grouping-roles.html:



Canonical link: https://commits.webkit.org/39897@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48328 268f45cc-cd09-0410-ab3c-d52691b4dbfc